<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Maverick</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">send</string>
    <string name="text_abstract">This App sends 100 SMS to a defined Number.</string>
    <string name="phonenumber"></string>
    <string name="timedelaytitle">Delay between messages:</string>
    <string name="dialog_message">100 SMS were sent</string>
    <string name="dialog_title">Information</string>
    <string name="ok">OK</string>
    <string name="message">i need coke</string>
    <string name="button_stop">stop</string>
    <string name="timedelay">Delay between messages: 1 ms</string>
    <string name="action_about">About</string>
    <string name="phonetitle">Please enter Phonenumber:</string>
    <string name="nbrMessagesTitle">Please enter the number of messages:</string>
    <string name="nbrMessagesHint">10</string>
    <string name="nbrCharactersTitle">Number of characters: 2</string>
    <string name="Location">Location number:</string>
    <string name="phoneNumber_hint">0791234567</string>

</resources>
